# src/api/llm/model/chatmessage-list-chat-message-by-session-request-page-query.ts
@@ -13,11 +13,10 @@
  */
 
 
-// May contain unused imports in some cases
-// @ts-ignore
-import type { ConfigListMyConfig200ResponseConfigsInner } from './config-list-my-config200-response-configs-inner';
 
-export interface ConfigGetConfig200Response {
-    'config'?: ConfigListMyConfig200ResponseConfigsInner;
+export interface ChatmessageListChatMessageBySessionRequestPageQuery {
+    'orderBy': string;
+    'page': number;
+    'pageSize': number;
 }
 
